--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.ExerciciosApp"
         tools:targetApi="31">
         <activity
+            android:name=".ExecicioOne"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -22,5 +25,6 @@
             </intent-filter>
         </activity>
     </application>
+
 
 </manifest>
